[package]
name = "kvs"
version = "0.1.0"
authors = ["Arash Outadi <aoutadi@infoblox.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
clap = "*"
structopt = "*"
failure = "*"
serde = { version = "1.0", features = ["derive"] }
ron = "*"
assert_cmd = "0.11"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"